assets/css/style.css
/**
 * Stylesheet for C3W
 * ==================
 * Authors (add yours):
 * - Stefan Haslinger
 * - Thomas Fellinger
 */
body {
  background: #151515 url("../images/bkg.png") 0 0;
  color: #eaeaea;
  font: 16px;
  line-height: 1.5;
  font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
}
.wrapper {
  margin: 0 auto;
  max-width: 600px;
  min-width: 280px;
}
body > .container{
  padding-left:20px;
  padding-right:20px;
}

/** 
 * Basic elements
 * ==============
 */
/* Headings */
h1, h2, h3, h4, h5, h6, .subheadline {
  font-weight: normal;
  font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
  color: #fb6900;
  letter-spacing: -0.03em;
  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.1),
               0 0 5px rgba(181, 232, 83, 0.1),
               0 0 10px rgba(181, 232, 83, 0.1);
  margin-bottom:20px;
}

/* Links */
a {
  color: #fb6900;
  text-shadow: 0 0 5px rgba(104, 182, 255, 0.5);
}

/* Buttons */
.button {
  display: inline-block;
  background: -webkit-linear-gradient(top, rgba(40, 40, 40, 0.3), rgba(35, 35, 35, 0.3) 50%, rgba(10, 10, 10, 0.3) 50%, rgba(0, 0, 0, 0.3));
  padding: 8px 18px;
  border-radius: 50px;
  border: 2px solid rgba(0, 0, 0, 0.7);
  border-bottom: 2px solid rgba(0, 0, 0, 0.7);
  border-top: 2px solid rgba(0, 0, 0, 1);
  color: rgba(255, 255, 255, 0.8);
  font-family: Helvetica, Arial, sans-serif;
  font-weight: bold;
  font-size: 13px;
  text-decoration: none;
  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.75);
  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.05);
}
.button:hover {
  background: -webkit-linear-gradient(top, rgba(40, 40, 40, 0.6), rgba(35, 35, 35, 0.6) 50%, rgba(10, 10, 10, 0.8) 50%, rgba(0, 0, 0, 0.8));
}
.button .icon {
  display: inline-block;
  width: 16px;
  height: 16px;
  margin: 1px 8px 0 0;
  float: left;
}
.button-github .icon {
  opacity: 0.6;
  background: url("../images/blacktocat.png") 0 0 no-repeat;
}

/**
 * Header
 * ======
 */
body > header {
  border-bottom: 1px dashed #007E80;
  padding: 20px 0;
  margin: 0 0 40px 0;
}
.site-title {
  font-size: 30px;
  line-height: 1.5;
  margin:0;
  font-weight: bold;
  font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
  color: #fb6900;
  text-shadow: 0 1px 1px rgba(0, 0, 0, 0.1),
               0 0 5px rgba(181, 232, 83, 0.1),
               0 0 10px rgba(181, 232, 83, 0.1);
  letter-spacing: -1px;
  -webkit-font-smoothing: antialiased;
}
.site-title:before {
  content: "./ ";
  font-size: 24px;
}
header .subheadline {
  font-size: 18px;
  font-weight: 300;
  color: #666;
  margin-left:40px;
}
#downloads {
  display: inline-block;
  text-align: center;
  margin: 0 0 20px 40px;
}

/* 
 * Main Section
 * ============
 */
main{
  -webkit-font-smoothing: antialiased;
}
/* override defaulkt.css, which is for 2 columns layout */
.main .articles,
.main > .inner > article{
  width:auto;
  float:none;
}

/* 
 * Content Section
 * ============
 */
article {
  border-bottom: 1px dashed #007E80;
  margin-bottom: 3.5em;
}
article > header {
	line-height: 0.5;
}
.metadata > .author {
	display: none;
}
article .post-title{
  font-size: 1.8em;
}
.content{
  font-size:1.6em;
}
.content img{
  display: block;
  max-width: 100%;
  height: auto;
}
.content h2 {
  font-size: 1.5em;
}
.content h3 {
  font-size: 1.125em;
}
.content h4 {
  font-size: 0.875em;
}
.content h5 {
  font-size: 0.75em;
  text-transform: uppercase;
  margin: 0 0 5px 0;
}
.content h6 {
  font-size: 0.75em;
  text-transform: uppercase;
  color: #999;
  margin: 0 0 5px 0;
}
.content dt {
  font-style: italic;
  font-weight: bold;
}
.content ul li {
  list-style: none;
}
.content ul li:before {
  content: ">>";
  font-family: Monaco, "Bitstream Vera Sans Mono", "Lucida Console", Terminal, monospace;
  font-size: 0.8125em;
  color: #fb6900;
  margin-left: -25px;
  margin-right: 21px;
  line-height: 16px;
}
.content blockquote {
  color: #aaa;
  padding-left: 10px;
  border-left: 1px dotted #666;
}
.content pre {
/*  background: rgba(0, 0, 0, 0.9); */
  border: 1px solid rgba(255, 255, 255, 0.15);
  padding: 10px;
  font-size: 0.875em;
  color: #fb6900;
  border-radius: 2px;
  -moz-border-radius: 2px;
  -webkit-border-radius: 2px;
  text-wrap: normal;
  overflow: auto;
  overflow-y: hidden;
}
.content table {
  width: 100%;
  margin: 0 0 20px 0;
}
.content th {
  text-align: left;
  border-bottom: 1px dashed #007E80;
  padding: 5px 10px;
}
.content td {
  padding: 5px 10px;
}
.content hr {
  height: 0;
  border: 0;
  border-bottom: 1px dashed #007E80;
  color: #007E80;
}

